tests/omit_main_failure/error.txt
Validation error: ./tests/omit_main_failure/omit_main_failure.fae, line 3: Project has a main function, but was declared to omit main in `fae.toml`
  3| fn main() {}
        ^^^^
